Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120748

Win11 Style: QMessageBox text invisible when using dark theme on Windows

XMLWordPrintable

    • Windows
    • 27dea6cf2 (dev), 124e63965 (6.7)

      Steps to reproduce:

      • Have a dark theme set in Windows 11 settings
      • Compile & run the following code:
      #include <QApplication>
      #include <QMessageBox>int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QMessageBox box(QMessageBox::Information, "MessageBox Title", "Look at me... invisible text", QMessageBox::Ok);
          box.exec();
          return 0;
      } 

      Expected result:

      • Message box is shown. Title and text is readable

      Actual result:

      • Message box is shown. Title is readable, text is invisible/white on white

        For Gerrit Dashboard: QTBUG-120748
        # Subject Branch Project Status CR V

            wladimir.leuschner Wladimir Leuschner
            owolff Oliver Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes