QWindows11Style: Fix QMessageBox drawing for light/dark mode

Fixes: QTBUG-120748
Pick-to: 6.7
Change-Id: I4101848e2e91c489cb53b38ae6bf0171701c5c54
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>